--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Profile"
+        android:text="@string/profile_profile"
         android:textSize="34sp"
         android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="@id/main"
@@ -33,7 +33,7 @@
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="\@garciatomaschavez"
+        android:text="@string/garciatomaschavez"
         android:textSize="16sp"
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@id/profilePic"
@@ -44,7 +44,7 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="fpgs.gtc@gmail.com"
+        android:text="@string/fpgs_gtc_gmail_com"
         android:textSize="16sp"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/username"
@@ -56,7 +56,7 @@
         android:id="@+id/wip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="This page is still W.I.P."
+        android:text="@string/profile_this_page_is_still_w_i_p"
         android:textSize="20sp"
         android:layout_marginTop="80dp"
         android:textColor="@color/Hunter_green"
@@ -70,7 +70,7 @@
         android:onClick="openLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Log Out"
+        android:text="@string/log_out"
         android:textSize="16sp"
         android:layout_marginBottom="36dp"
         app:layout_constraintBottom_toBottomOf="@id/main"
