--- a/app/src/main/res/layout-land/activity_sign_up.xml
+++ b/app/src/main/res/layout-land/activity_sign_up.xml
@@ -64,7 +64,7 @@
                 android:layout_height="match_parent"
                 android:alpha="0.6"
                 android:background="@color/white"
-                android:hint="Username"/>
+                android:hint="@string/username"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -84,7 +84,7 @@
                 android:layout_height="match_parent"
                 android:alpha="0.6"
                 android:background="@color/white"
-                android:hint="Email"
+                android:hint="@string/email"
                 android:inputType="textEmailAddress"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -123,7 +123,7 @@
                 android:layout_height="match_parent"
                 android:alpha="0.6"
                 android:background="@color/white"
-                android:hint="Password"
+                android:hint="@string/password"
                 android:inputType="textPassword"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -144,7 +144,7 @@
                 android:layout_height="match_parent"
                 android:alpha="0.6"
                 android:background="@color/white"
-                android:hint="Confirm Password"
+                android:hint="@string/confirm_password"
                 android:inputType="textPassword"/>
 
 
@@ -173,7 +173,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:onClick="openMain"
-            android:text="Sign up"/>
+            android:text="@string/sign_up"/>
 
         <Button
             android:id="@+id/button_cancel"
@@ -182,7 +182,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:onClick="openLogin"
-            android:text="Cancel"/>
+            android:text="@string/cancel"/>
     </LinearLayout>
 
     <androidx.constraintlayout.widget.Guideline
