--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -46,7 +46,7 @@
             android:layout_height="match_parent"
             android:alpha="0.6"
             android:background="@color/white"
-            android:hint="Username">
+            android:hint="@string/username">
 
         </EditText>
 
@@ -68,7 +68,7 @@
             android:layout_height="match_parent"
             android:alpha="0.6"
             android:background="@color/white"
-            android:hint="Email"
+            android:hint="@string/email"
             android:inputType="textEmailAddress">
 
         </EditText>
@@ -92,7 +92,7 @@
             android:layout_height="match_parent"
             android:alpha="0.6"
             android:background="@color/white"
-            android:hint="Password"
+            android:hint="@string/password"
             android:inputType="textPassword">
 
         </EditText>
@@ -116,7 +116,7 @@
             android:layout_height="match_parent"
             android:alpha="0.6"
             android:background="@color/white"
-            android:hint="Confirm Password"
+            android:hint="@string/confirm_password"
             android:inputType="textPassword">
 
         </EditText>
@@ -130,7 +130,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="24dp"
         android:onClick="openMain"
-        android:text="Sign up"
+        android:text="@string/sign_up"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@id/guideline1"
         app:layout_constraintTop_toBottomOf="@id/til4" />
@@ -142,7 +142,7 @@
         android:layout_height="60dp"
         android:layout_marginTop="12dp"
         android:onClick="openLogin"
-        android:text="Cancel"
+        android:text="@string/cancel"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@id/guideline1"
         app:layout_constraintTop_toBottomOf="@id/button_signup"/>
