Added Pages 1, 2, 3, and 4 and MainBn for the start of bottom menu navigation

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,5 +11,7 @@
 
     <style name="Theme.Nicestart.ActionBar" parent="Theme.Material3.DayNight">
 
+    <style name="Theme.Nicestart.AppOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     </style>
 </resources>
