Finished the basic implementation of a Bottom Menu Navigation with 4 fragments / pages.

--- a/app/src/main/res/layout/activity_main_bn.xml
+++ b/app/src/main/res/layout/activity_main_bn.xml
@@ -10,7 +10,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.Nicestart.AppOverlay">
+        >
 
         <TextView
             android:id="@+id/title"
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:minHeight="?actionBarSize"
-            android:padding="@dimen/appbar_padding"
+            android:padding="8dp"
             android:text="@string/app_name"
             android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
