--- a/app/src/main/res/layout/fragment_page1.xml
+++ b/app/src/main/res/layout/fragment_page1.xml
@@ -3,12 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/design_default_color_primary"
     tools:context=".fragments.Page1">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="This is page 1!"
+        android:textAlignment="center"
+        android:textSize="24pt"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        />
 
 </FrameLayout>
