--- a/app/src/main/res/layout/fragment_page3.xml
+++ b/app/src/main/res/layout/fragment_page3.xml
@@ -3,12 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Timberwolf"
     tools:context=".fragments.Page3">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+        android:text="This is page 3!"
+        android:textAlignment="center"
+        android:textSize="24pt"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/black"
+        />
 
 </FrameLayout>
