--- a/app/src/main/res/layout/fragment_page1.xml
+++ b/app/src/main/res/layout/fragment_page1.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="This is page 1!"
+        android:text="@string/this_is_page_1"
         android:textAlignment="center"
         android:textSize="24pt"
         android:layout_marginTop="20dp"
