--- a/app/src/main/res/layout/fragment_page2.xml
+++ b/app/src/main/res/layout/fragment_page2.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:text="This is page 2!"
+        android:text="@string/this_is_page_2"
         android:textAlignment="center"
         android:textSize="24pt"
         android:layout_marginTop="20dp"
